--- a/user.ui
+++ b/user.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>799</width>
     <height>600</height>
    </rect>
   </property>
@@ -169,7 +169,7 @@ background-color: rgb(255, 255, 127);</string>
     <property name="geometry">
      <rect>
       <x>540</x>
-      <y>420</y>
+      <y>410</y>
       <width>251</width>
       <height>41</height>
      </rect>
@@ -401,9 +401,9 @@ color: rgb(255, 255, 255);</string>
     <property name="geometry">
      <rect>
       <x>540</x>
-      <y>470</y>
+      <y>460</y>
       <width>241</width>
-      <height>41</height>
+      <height>71</height>
      </rect>
     </property>
     <property name="font">
@@ -436,7 +436,8 @@ color: rgb(255, 255, 255);</string>
      <enum>Qt::LayoutDirection::RightToLeft</enum>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 127);</string>
+     <string notr="true">background-color: rgb(255, 255, 127);
+color: rgb(0, 0, 0);</string>
     </property>
     <property name="text">
      <string>Ajokortti Luettu</string>
@@ -460,7 +461,7 @@ color: rgb(255, 255, 255);</string>
     <property name="frameShadow">
      <enum>QFrame::Shadow::Raised</enum>
     </property>
-    <widget class="QPlainTextEdit" name="carNamePlainTextEdit">
+    <widget class="QPlainTextEdit" name="carFreePlainTextEdit">
      <property name="geometry">
       <rect>
        <x>0</x>
